css/styles.css
/* ... */
/* advertisements */
aside {
  float: left;
  width: 246px;
}

aside article {
  width: 236px;
  border: 1px solid #cccccc;
  margin-bottom: 5px;
}


.module {
  height: 170px;
  background-image:
    url(../images/bg-bike.png), 
    url(../images/module.svg);
  background-image:
    url(../images/bg-bike.png), 
    -webkit-gradient(linear, 
    from(rgba(0,0,0,0.4)), 
    color-stop(37%, rgba(0,0,0,0)),
    color-stop(83%, rgba(0,0,0,0)), 
    color-stop(92%, rgba(0,0,0,0.16)), 
    color-stop(98%, rgba(0,0,0,0)));
  background-image:
    url(../images/bg-bike.png),
    -moz-linear-gradient(0% 0% 270deg,
    rgba(0,0,0,0.4) 0, 
    rgba(0,0,0,0) 37%,
    rgba(0,0,0,0) 83%, 
    rgba(0,0,0,0.06) 92%, 
    rgba(0,0,0,0) 98%);
  background-image:
    url(../images/bg-bike.png),
    -webkit-linear-gradient(top,
    rgba(0,0,0,0.4) 0, 
    rgba(0,0,0,0) 37%,
    rgba(0,0,0,0) 83%, 
    rgba(0,0,0,0.06) 92%, 
    rgba(0,0,0,0) 98%);
  background-position: 50% 88%, 0 0;
    -webkit-transition: background-position  1s linear 250ms;
  -moz-transition: background-position  1s linear 250ms;
  -o-transition: background-position  1s linear 250ms;
  transition: background-position  1s linear 250ms;
}

#ad2 a {
  font-family: LeagueGothic, Arial Narrow, Arial, sans-serif;
  font-size: 40px;
  text-transform: uppercase;
  text-align: center;
  text-decoration: none;
  padding: 0 5px;
  text-shadow: #fff 1px 1px;
}

.module:hover {
  background-position: 150% 88%, 0 0;
}
#ad2  h1 {
  color: #484848;
  text-align: center;
  text-transform: uppercase;
  text-shadow: 1px 1px #FFFFFF;
  font-family: LeagueGothic, Arial Narrow, Helvetica, sans-serif;
  font-size: 42px;
  letter-spacing:-1px;
  margin: 20px 5px;
}

aside > article:nth-of-type(3) {
  background-image:url(../images/dukes.png);
  background-position: bottom left;
  -webkit-transition: transform  2s linear 250ms;
  -moz-transition: transform  2s linear 250ms;
  -o-transition: transform  2s linear 250ms;
  transition: transform  2s linear 250ms;
}

#ad1 h1 {
  font-family: AcknowledgementMedium;
  letter-spacing: 0.1em;
  font-size: 36px;
  margin: 0 0 0 0;
  text-align: center;
}

#ad1 h1:first-letter {
  letter-spacing: -0.1em;
}

#ad1 p {
  margin: 0;
  font-family: AcknowledgementMedium;
  font-size: 14px;
  text-align: center;
}

aside p + a {
  display: block;
  text-decoration: none;
  font-family: AcknowledgementMedium;
  border: 5px double;
  color: #ffffff; 
  background-color: #484848; 
  text-align: center;
  font-size: 28px;
  margin: 5px 5px 9px 5px;
  padding: 15px 0;
  -webkit-box-shadow: 2px 5px #484848;
  -moz-box-shadow: 2px 5px #484848;
  box-shadow: 2px 5px #484848;
  text-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
  -moz-border-radius: 15px;
  border-radius: 15px;
  position: relative;

}

#ad1 a.wanted:hover {
  -webkit-box-shadow: 4px 10px #484848;
  -moz-box-shadow: 4px 10px #484848;
  box-shadow: 4px 10px #484848;  
  top: -5px;
  left: -2px;
}


#ad3 h1 {
  font-size: 20px;
  font-family: AcknowledgementMedium;	
  padding: 0 30px 0 75px;
  line-height:1;
  color: #999;
  margin: 0 0 0 15px;
}
#ad3 h1 span {
  font-size: 30px;
  
  color: #999999;
  display:inline-block;
	/* Firefox */
	-moz-transition: all 0.3s ease;
	/* WebKit */
	-webkit-transition: all 0.3s ease;
	/* Opera */
	-o-transition: all 0.3s ease;
	/* Standard */
	transition: all 0.3s ease;


}
#ad3 h1:hover {

}
#ad3 h1:hover span {
  color: #484848;
  -webkit-transform:rotate(10deg) translateX(40px) scale(1.5,1.5));
  -moz-transform:rotate(10deg) translateX(40px) scale(1.5,1.5);
  -ms-transform:rotate(10deg) translateX(40px) scale(1.5,1.5);
  -o-transform:rotate(10deg)translateX(40px) scale(1.5,1.5);
  transform:rotate(10deg) translateX(40px) scale(1.5,1.5);
}

#ad3 p {
  padding: 5px 3px 0 75px;	
  font-size: 0.85em;
}

#ad4 h1
{
	font-size: 20px;
    font-family: AcknowledgementMedium;	
	text-align:center;
}	

#ad4
{
	height:140px;
	position:relative;

}

#mapDiv
{
	height: 140px;
	width: 236px;
}

#spinner
{
	position:absolute;
	top:20px;
	left:65px;
}
	
	
/* Forms */
form {
  border: solid 2px #888;
  border-width: 2px 0;
  clear: both;
  -moz-box-shadow: 
    inset 1px 1px 84px rgba(0,0,0,0.24), 
    inset -1px -1px 84px rgba(0,0,0,0.24);
  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#cacaca', endColorstr='#b1b1b1'); /* IE6,IE7 */
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#cacaca', endColorstr='#b1b1b1')"; /* IE8+ */

  margin: 1px 0 1px 0;
  text-align: center;
  padding: 20px;
  min-height: 300px;
  background: rgba(0,0,0,0.2) url(../images/bg-form.png) no-repeat bottom center;
}

form#geoForm
{
	padding: 0px;
	border:none;
	min-height:0px;
	background:none;
	filter: none;
	-ms-filter:none;
	-moz-box-shadow: none;
}

form ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
form ul li {
  margin-bottom: 40px;
}

label {
  font-family: LeagueGothic, Tahoma, Geneva, sans-serif;
  font-size: 26px;
  display:block;
  margin: auto;
  text-align:center;
}
form p {
  text-align: center;
}
input[type=text], input[type=email], input[type=password], input[type=url], textarea {
  background-color: transparent;
  border: dotted #484848;	
  border-width: 0 0 1px 0;
  display:block;
  margin: 10px auto 10px;
  font-style:italic;
  font-family: Times, "Times New Roman", serif;
  padding: 5px 30px 5px 30px;
  width: 50%;
}

input#zipcode {
	width:25%;
	display:inline;
	margin-right: 25px;
}
input[type=number] {
  width: 3em;
}

input:not([type=range]):not([type=date]):not([type=submit]):not([type=button]):not([type=checkbox]):not([type=number]) {
  background: transparent no-repeat top right;
}

input:not([type=range]):not([type=date]):not([type=submit]):not([type=button]):not([type=checkbox]):not([type=number]):required {
  background-image: url('../images/required.png'); 
}
/* ... */

